modules/game_rewardwall/game_rewardwall.css
.reward-wall-window {
  position: relative;
  width: 541px;
  height: 495px;
  display: block;
  color: #929292;
}

.history-panel {
  height: 445px;
}

.history-list {
  background-color: #363636;
  display: block;
  border-color: #00000077;
  border-width: 1px;
  width: 98%;
}

.content-panel {
  width: 529px;
  height: 136px;
  margin-left: 5px;
  margin-top: -5px;
}

.resting-area-info {
  margin-left: -10px;
  height: 108px;
  width: 108px;
}

.resting-area-icon {
  margin-left: 44px;
  width: 22px;
  height: 55px;
  --image-size: 66 44;
  --image-fixed-ratio: true;
  --text-offset: 25 -7;
}

.resting-area-time {
  width: 22px;
  height: 28px;
  margin-left: 30;
  --image-border: 3;
  --image-source: /images/ui/test/button-verydarkgrey-down;
}

#bonusIcon1 {
  --icon-clip: 0 0 64 64;
  width: 100%;
}

#bonusIcon2 {
  --icon-clip: 64 0 64 64;
  width: 100%;
}

#bonusIcon3 {
  --icon-clip: 128 0 64 64;
  width: 100%;
}

#bonusIcon4 {
  --icon-clip: 192 0 64 64;
  width: 100%;
}

#bonusIcon5 {
  --icon-clip: 256 0 64 64;
  width: 100%;
}

#bonusIcon6 {
  --icon-clip: 320 0 64 64;
  width: 100%;
}

.resting-area-gold {
  size: 22 20;
  margin-left: 27;
}

.bonus-icons-container {
  margin-left: 90px;
  border-color: #00000077;
  height: 71px;
  --phantom: true;
}

.premium-message {
  border-color: #00000077;
  height: 38px;
  width: 400px;
  margin-top: 70px;
  margin-left: 111px;
  --text-auto-resize: false;
}

.daily-rewards-panel {
  height: 139px;
  padding-left: 25px;
}

.reward-item {
  width: 68px;
  height: 95px;
  margin-top: -9px;
}

.reward-button {
  width: 68px;
  height: 68px;
}

.reward-label {
  width: 68px;
  height: 22px;
}

.reward-arrow {
  --image-offset: 1 25;
  --image-clip: 0 0 5 7;
  width: 5px;
  height: 7px;
  --image-auto-resize: false;
  --image-size: 5 7;
}

.reward-arrow-loop {
  --image-offset: -466 90;
  --image-size: 435 13;
  --phantom: true;
}

.premium-panel {
  height: 55px;
  width: 22px;
  --image-source: /images/ui/2pixel_up_frame_borderimage; 
  --image-border: 3; 
  --text-offset: 15 -15;
  text-wrap: true; 
  padding: 10 10 10 10;
  display: block; 
}

.info-label {
  white-space: pre-wrap;
}

.premium-info2 {
  height: 38px;
  width: 350px;
  margin-left: -0px;
  margin-top: -5px;
}

.premium-button {
  float: right;
}

.infoPanel {
  height: 92px;
  text-align: left
}

.free-info {
  text-align: top-left;
  text-wrap: true;
  width: 255px;
  color: #808080;
}

.premium-info {
  margin-left: 58px;
  text-align: top-left;
  text-wrap: true;
  width: 255px;
}

.footer-panel {
  width: 506px;
  height: 126px;
  margin-left: 5px;
}

.footer-separator {
  width: 540px;
  height: 2px;
}

.footer-gold-1 {
  width: 30px;
  height: 22px;
  margin-top: 120px;
}

.footer-gold-2 {
  height: 22px;
  width: 50px;
  margin-left: 5px;
  margin-top: 10px;
}

.instant-reward-button {
  margin-top: 10px;
  margin-left: 5px;
}

.action-button {
  font: cipsoftFont;
  --text-auto-resize: true;
}
.close-button {
  margin-left: 5px;
  float: right;
  text-align: center;
  vertical-align: center;
}
.history-button {
  float: right;
  margin-right: 10px;
}

.imgBonusesCss {
  width: 60px;
  height: 70px;
}


.bottom-panel { 
  text-wrap: true; 
  --image-source: /images/ui/2pixel_up_frame_borderimage; 
  --image-border: 3; 
  display: block; 
  margin-top: 10px; 
  height: 95px; 
  width: 100%; 
  --text-offset: 10 2;
 }

